--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Weather</title>
 </head>
 <body>
-    
+    <div class="location">
+        <h1 class="location-timezone">Timezone</h1> 
+        <p>Icon</p>
+    </div>
+    <div class="temperatue">
+        <div class="degree-section">
+       <h2 class="temperature-degree">34</h2>
+       <span>F</span>
+    </div>
+       <div class="temperature-description">Its friggin cold</div>
+    </div>
 
     <script src="app.js"></script>
 </body>
